packages/sycamore-macro/tests/view/element-fail.stderr
error: expected `=`
 --> tests/view/element-fail.rs:5:54
  |
5 |         let _: View<G> = view! { cx, button(disabled) };
  |                                                      ^

error: expected `=`
 --> tests/view/element-fail.rs:6:54
  |
6 |         let _: View<G> = view! { cx, button(on:click) };
  |                                                      ^

error: unknown directive `unknown`
 --> tests/view/element-fail.rs:7:46
  |
7 |         let _: View<G> = view! { cx, button(unknown:directive="123") };
  |                                              ^^^^^^^

error: expected `=`
  --> tests/view/element-fail.rs:10:47
   |
10 |         let _: View<G> = view! { cx, button(a.b.c="123") };
   |                                               ^

error: unexpected end of input, children and dangerously_set_inner_html cannot be both set
  --> tests/view/element-fail.rs:12:26
   |
12 |           let _: View<G> = view! { cx,
   |  __________________________^
13 | |             p(dangerously_set_inner_html="<span>Test</span>") {
14 | |                 "Error"
15 | |             }
16 | |         };
   | |_________^
   |
   = note: this error originates in the macro `view` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0412]: cannot find type `unknownelement` in module `sycamore::html`
 --> tests/view/element-fail.rs:8:39
  |
8 |         let _: View<G> = view! { cx, unknownelement };
  |                                       ^^^^^^^^^^^^^^ not found in `sycamore::html`
